--- a/src/productPage/components/Product.css
+++ b/src/productPage/components/Product.css
@@ -4,28 +4,34 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 200px;
+    /* max-width: 220px;   
     width: 100%;
-    margin: 30px;
-    
+    margin: 30px; */
+    padding: 10px;
+    flex: 0 0 33.3333%;
+
 }
 
 .temp{
     border: solid orange 2px;
 }
 
+
+                                                    /* IMAGE */
 .product__image-container{
     width: 100%;
+    height: 200px;
     border: solid green 1px;
     aspect-ratio: 1/1;
-
 }
-
 .product__image{
+    height: 100%;
     width: 100%;
+    object-fit: contain;
     cursor: pointer;
 }
 
+                                                    /* TITLE */
 .product__title-container{
     margin: 10px 10px;
 }
@@ -36,4 +42,19 @@
     text-align: center;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+                                                    /* BUTTON */
+.product__button-container{
+    margin-top: 10px;
+    width: 100%;
+}
+
+.product__button{
+    border: solid #53c563 1px;
+    color: white;
+    border-radius: 3px;
+    background-color: #53c563;
+    width: 100%;
+    height: 50px;
 }
