--- a/src/productPage/ProductPage.css
+++ b/src/productPage/ProductPage.css
@@ -1,7 +1,22 @@
 .productPage__container{
     border: solid red 2px;
-}
-.productPage__product-container{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    
+}
+
+.productPage__products-container{
+    border: solid green 3px;
+    display: flex;
+    justify-content: center;
+    
+}
+.productPage__products{
+    border: solid blue 2px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(max(33%, 10rem), 1fr));}
+
+.test{
+    display: inline-block;
 }
