--- a/src/productPage/components/Product.css
+++ b/src/productPage/components/Product.css
@@ -1,14 +1,15 @@
+
+
 .product__container{
-    border: solid red 2px;
+    border: solid green 2px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* max-width: 220px;   
-    width: 100%;
-    margin: 30px; */
-    padding: 10px;
-    flex: 0 0 33.3333%;
+    max-width: 300px;
+    /*    
+    width: 100%; */
+    /* margin: 20px 10px; */
 
 }
 
@@ -20,7 +21,7 @@
                                                     /* IMAGE */
 .product__image-container{
     width: 100%;
-    height: 200px;
+    height: 250px;
     border: solid green 1px;
     aspect-ratio: 1/1;
 }
