sidecart displays items in cart

--- a/src/navBar/sideCart/components/CartItem.css
+++ b/src/navBar/sideCart/components/CartItem.css
@@ -22,7 +22,7 @@
     border: solid red 1px;
     display: flex;
     flex-direction: column;
-    max-width: 250px;
+    width: 250px;
 }
 
 .cartItem__title{
