--- a/src/homePage/HomePage.css
+++ b/src/homePage/HomePage.css
@@ -1,4 +1,6 @@
 .hP__container{
+    font-family: var(--font-family-sans-serif);
+
 }
 .hP__heroImage-container{
     position: relative;
@@ -28,7 +30,9 @@
 }
 
 .hP__heroImage__button{
+    cursor: pointer;
     outline: none;
+    border: none;
     margin-right: 50px;
     height: 50px;
     width: 150px;
@@ -45,9 +49,10 @@
     display: flex;
     justify-content: center;
     text-transform: capitalize;
+    font-size: 2rem;
+    margin: 30px;
 }
 
 .hP__main-cards-container{
     display: flex;
-
 }
