--- a/src/homePage/HomePage.css
+++ b/src/homePage/HomePage.css
@@ -25,8 +25,9 @@
 }
 
 .hP__heroImage__text{
-    font-size: 5rem;
+    font-size: 8rem;
     color: white;
+    margin: 20px 0;
 }
 
 .hP__heroImage__button{
