--- a/src/homePage/components/Card.css
+++ b/src/homePage/components/Card.css
@@ -15,7 +15,7 @@
     border-radius: 2px;
     width: fit-content;
     padding: 10px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .card__image-container{
