--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
     --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
     --font-weight-m: 600;
     font-size: 10px;
+    color: #212A2F;
 }
 
 
