--- a/src/homePage/HomePage.css
+++ b/src/homePage/HomePage.css
@@ -50,7 +50,8 @@
     display: flex;
     justify-content: center;
     text-transform: capitalize;
-    font-size: 2rem;
+    font-size: 3rem;
+    font-weight: 600;
     margin: 30px;
 }
 
