--- a/src/productPage/components/Product.css
+++ b/src/productPage/components/Product.css
@@ -44,11 +44,11 @@
 }
 
 .product__button{
-    border: solid #53c563 1px;
+    border: solid #212A2F 1px;
     cursor: pointer;
     color: white;
     border-radius: 3px;
-    background-color: #53c563;
+    background-color: #212A2F;
     width: 100%;
     height: 50px;
 }
