--- a/src/navBar/sideCart/SideCart.css
+++ b/src/navBar/sideCart/SideCart.css
@@ -1,19 +1,18 @@
 .sideCart__container{
+    z-index: 1;
     position: absolute;
     font-size: 1.6rem;
-    /* background-color: rgba(0, 0, 0, 0.5) ; */
+    background-color: rgba(0, 0, 0, 0.5) ;
     height: 100vh;
     
-    /* width: 100%; */
+    width: 100%;
     top: 0;
-    /* display: flex;
-    justify-content: flex-end; */
+    display: flex;
+    justify-content: flex-end;
     font-family: var(--font-family-sans-serif);
-    border: solid green 2px;
 }
 .sideCart__box{
     background-color: white;
-    border: solid red 2px;
     height: 100%;
 }
 
@@ -28,6 +27,7 @@
     flex: 1 1 auto;
     display: flex;
     align-items: center;
+    padding: 0px 8px;
 }
 .sideCart__header__icon{
     height: 25px;
@@ -62,8 +62,18 @@
 }
 
 .sideCart__items{
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
+    height: 350px;
+}
+
+.sideCart__items {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+.sideCart__items::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 
                                                         /* PROMO */
@@ -75,6 +85,7 @@
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.4rem;
+    border-bottom: solid lightgray 1px;
 }
 
 .sideCart__promo-container button{
@@ -115,12 +126,12 @@
 
                                                         /* MESSAGE */
 
+/* TEXT BOX CAUSING SIZING ISSUES */
 
 .sideCart__message-container{
- border: solid red 1px;
- width: 100%;
+    display: flex;
+    justify-content: center;
+    max-width: 450px;
+    font-size: 1.3rem;
+    margin: 20px 5px;
 }
-.sideCart__message-container p{
-    border: solid green 2px;
-  
-   }
