added open close functionality to sidecart

--- a/src/navBar/NavBar.css
+++ b/src/navBar/NavBar.css
@@ -80,7 +80,9 @@
 
 .nB__icon__cart{
     display: flex;
-    text-decoration: none;
+    border: none;
+    outline: none;
+    background-color: transparent;
 }
 
 .nB__icon{
