completed empty cart

--- a/src/navBar/sideCart/SideCart.css
+++ b/src/navBar/sideCart/SideCart.css
@@ -135,3 +135,51 @@
     font-size: 1.3rem;
     margin: 20px 5px;
 }
+
+                                                        /* EMPTY*/
+
+.sideCart__empty-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 450px;
+    padding-top: 20px;
+}
+
+.sideCart__empty__image-container{
+    display: flex;
+    justify-content: center;
+    max-width: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.sideCart__empty__image{
+    object-fit: cover;
+    aspect-ratio: 1/1;
+    height: 100%;
+    width: 100%;
+}
+.sideCart__empty__message{
+    font-size: 2rem;
+    font-weight: 600;
+    margin: 20px;
+}
+.sideCart__empty__button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sideCart__empty__button{
+    cursor: pointer;
+    outline: none;
+    border: none;
+    margin: 20px;
+    height: 50px;
+    width: 150px;
+    font-weight: 700;
+    font-size: 16px;
+    font-family: var(--font-family-sans-serif);
+}
+
