--- a/src/navBar/sideCart/SideCart.css
+++ b/src/navBar/sideCart/SideCart.css
@@ -105,6 +105,8 @@
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.2rem;
+    display: flex;
+    justify-content: space-between;
 }
 
                                                         /* checkout button */
