--- a/src/navBar/hamburgerMenu/HamburgerMenu.css
+++ b/src/navBar/hamburgerMenu/HamburgerMenu.css
@@ -7,6 +7,74 @@
     width: 100%;
     top: 0;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     font-family: var(--font-family-sans-serif);
+}
+
+.hM__box{
+    height: 100%;
+    background-color: white;
+    max-width: 400px;
+    width: 100%;
+    overflow-y: scroll;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+.hM__box::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
+
+                                                        /* HEADER */
+
+.hM__logo__container{
+    flex: 1 1 0;
+    font-size: 4rem;
+    display: flex;
+    justify-content: center;
+}
+
+                                                        /* MAIN */
+
+.hM__options__container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.hM__option__container{
+    position: relative;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    max-width: 300px;
+    width: 100%;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.hM__option__img{
+    height: 100%;
+    width: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
+
+.hM__option__text-container{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
+.hM__option__text{
+    text-transform: capitalize;
+    color: white;
+    font-weight: 600;
+    font-size: 2rem;
 }
