--- a/src/globalComponents/modalWrapper/ModalWrapper.css
+++ b/src/globalComponents/modalWrapper/ModalWrapper.css
@@ -1,5 +1,7 @@
 
 .modalWrapper__container{
+    font-family: var(--font-family-sans-serif);
+
     position: fixed;
     height: 100vh;
     width: 100vw;
