--- a/src/navBar/NavBar.css
+++ b/src/navBar/NavBar.css
@@ -1,10 +1,12 @@
 .nB__container{
+    position: relative;
     /* position: sticky;
     top: 0;
     z-index: 1; */
     width: 100%;
     font-family: var(--font-family-sans-serif);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     background-color: white;
     border-bottom: solid lightgray 1px;
