--- a/src/globalComponents/footer/Footer.css
+++ b/src/globalComponents/footer/Footer.css
@@ -14,8 +14,6 @@
     justify-content: space-around;
     margin-top: 20px;
     margin-bottom: 20px;
-
-
 }
 
 .footer__logo{
@@ -28,6 +26,7 @@
 }
 
 .footer__socials{
+    max-width: 200px;
     list-style: none;
     display: flex;
     align-items: center;
@@ -35,32 +34,21 @@
     margin-top: 10px;
 }
 
-
 .footer__social-icon{
     width: 20px;
 }
 
-.colSpace{
+                                                    /* FOOTER LISTS */
+.footer__list{
     list-style: none;
 }
-.footer__shop li{
+.footer__list li{
     margin-top: 2px;
 }
-.footer__service li{
-    margin-top: 2px;
-}
-.footer__join{
-    margin-top: 2px;
-}
+
 
                                                 /* SIGN UP */
 .footer__signUp{
-}
-
-.mobile{
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 .footer__input-container{
     display: flex;
@@ -87,8 +75,36 @@
     width: 100%;
     padding: 5px;
 }
-
+                                                    /* TERMS AND CONDITIONS */
 .footer__tC{
     display: flex;
     margin-bottom: 20px;
+}
+
+                                                    /* MEDIA QUERIES */
+.mobile{
+    border: solid red 1px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.footer__list-title{
+    display: flex;
+    justify-content: space-between;
+    border: solid lightgray 1px;
+    padding: 5px;
+}
+
+.footer__list-button{
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    font-size: 2rem;
+    color: white;
+    font-weight: 600;
 }
