--- a/src/globalComponents/footer/FooterList.css
+++ b/src/globalComponents/footer/FooterList.css
@@ -1,7 +1,7 @@
 
-.FooterList__list{
+.footerList__list{
     list-style: none;
 }
-.FooterList__list li{
+.footerList__list li{
     margin-top: 2px;
 }
