--- a/src/navBar/navList/NavList.css
+++ b/src/navBar/navList/NavList.css
@@ -2,26 +2,37 @@
     display: flex;
     flex: 2 1 0;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: space-around;
     height: 100%;
     list-style: none;
 }
+
+.navList__box{
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-around;
+}
+
 .navList__item{
-    padding: 20px 0;
+    padding: 30px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100%
 }
 
 .navList__item button{
+    border: solid red 1px;
     outline: none;
     border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: transparent;
     text-transform: uppercase;
-    font-weight: var(--font-weight-m);
-    font-size: 1.4rem;    
+    font-weight: 500;
+    font-size: 1.2rem;    
     cursor: pointer;
 }
