--- a/src/navBar/navList/NavList.css
+++ b/src/navBar/navList/NavList.css
@@ -20,7 +20,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%
+    height: 100%;
+    cursor: pointer;
+
 }
 
 .navList__item button{
@@ -33,6 +35,6 @@
     background-color: transparent;
     text-transform: uppercase;
     font-weight: 500;
-    font-size: 1.2rem;    
-    cursor: pointer;
+    font-size: 1.2rem; 
+    cursor: pointer;   
 }
