--- a/src/navBar/NavBar.css
+++ b/src/navBar/NavBar.css
@@ -44,6 +44,7 @@
 }
 .nB__logo-container{
     width: fit-content;
+    color: red;
 }
 
                                                             /* NAV ICONS */
