--- a/src/navBar/navList/NavList.css
+++ b/src/navBar/navList/NavList.css
@@ -34,7 +34,8 @@
     align-items: center;
     background-color: transparent;
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight: 550;
     font-size: 1.2rem; 
-    cursor: pointer;   
+    cursor: pointer; 
+    color: #212A2F;
 }
