--- a/src/homePage/components/Card.css
+++ b/src/homePage/components/Card.css
@@ -39,8 +39,14 @@
     width: 100%;
 }
 
-.card__darkBg button{
+.card__darkBg-button{
     cursor: pointer;
+    width: 100px;
+    height: 30px;
+    outline: none;
+    border: none;
+}
+.fakeButton{
     width: 100px;
     height: 30px;
     outline: none;
