--- a/src/homePage/components/CategoryCarousel.css
+++ b/src/homePage/components/CategoryCarousel.css
@@ -1,4 +1,8 @@
-
+.cC__card-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .cC__title-container{
     display: flex;
     justify-content: center;
@@ -20,6 +24,7 @@
     width: 100%;
     aspect-ratio: 1/1;
     object-fit: cover;
+    border-radius: 50%;
 }
 
 .cC__card__title-container{
