--- a/src/navBar/NavBar.css
+++ b/src/navBar/NavBar.css
@@ -21,13 +21,6 @@
     align-items: center;
 }
 
-.temp{
-    /* border: solid red 1px; */
-}
-
-.temp2{
-    /* border: solid blue 1px; */
-}
                                                             /* HAMBURGER CONTAINER */
 .nB__hB-container{
     display: flex;
@@ -42,21 +35,17 @@
     justify-content: center;
     /* padding-left: 20px; */
 }
-.nB__logo-container{
-    width: fit-content;
-    color: red;
-}
+
 
                                                             /* NAV ICONS */
 .nB__icons__container{
-    /* border: solid red 1px; */
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex: 1 1 0;
 }
 .nB__icons-container{
-    /* border: solid orange 1px; */
+    padding-right: 20px;
     display: flex;
     max-width: 250px;
     width: 100%;
