--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,10 @@
     --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
     --font-weight-m: 600;
+    --rating: 1;
     font-size: 10px;
     color: #212A2F;
+
 }
 
 @media only screen and (min-width: 1400px) {
