--- a/src/productPage/ProductPage.css
+++ b/src/productPage/ProductPage.css
@@ -19,6 +19,7 @@
     background-color: white;
     display: flex;
     margin-right: 20px;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -135,11 +136,13 @@
 @media only screen and (max-width: 700px) {
     .productPage__product-container {
         flex-direction: column;
+        align-items: center;
     }
     .productPage__images__container{
         flex-direction: column;
     }
     .productPage__sideImages__container{
+        flex-direction: row;
         margin-top: 20px;
     }
 }
