--- a/src/homePage/components/CategoryGrid.css
+++ b/src/homePage/components/CategoryGrid.css
@@ -8,6 +8,7 @@
     grid-template-columns: repeat( var(--num-cols) ,1fr);
     grid-auto-rows: var(--row-height);
     gap: var(--gap);
+    font-family: var(--font-family-sans-serif);
 }
 
 .cG__container img{
@@ -17,10 +18,30 @@
     object-fit: cover;
 }
 
+.image-container{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.image-container p{
+    position: absolute;
+    font-size: 3.5rem;
+    font-weight: 600;
+    color: white;
+
+}
+
 .image-grid-col-2{
     grid-column: span 2;
 }
 
 .image-grid-row-2{
     grid-row: span 2;
+}
+
+@media only screen and (max-width: 1000px) {
+    .image-container p{
+        font-size: 2.5rem;
+    }
 }
