--- a/src/homePage/components/Card.css
+++ b/src/homePage/components/Card.css
@@ -14,7 +14,7 @@
     border: solid lightgray 1px;
     border-radius: 2px;
     width: fit-content;
-    padding: 10px;
+    padding: 0 10px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     background-color: white;
 }
@@ -24,7 +24,6 @@
     max-height: 300px;
     max-width: 300px;
     margin: 30px;
-    
 }
 
 .card__darkBg{
@@ -61,14 +60,21 @@
 
 .card__title-line{
     border-bottom: solid lightgray 1px;
+    width: 100%;
+    margin-bottom: 5px;
 }
 
-.card__title-container{
-    padding: 15px;
+.card__text-container{
+    padding: 0 15px;
     height: 100%;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 1.8rem;
+}
+.card__text-container p{
+    font-size: 1.4rem;
+    margin-top: 5px;
 }
