--- a/src/productsPage/ProductsPage.css
+++ b/src/productsPage/ProductsPage.css
@@ -15,5 +15,6 @@
     width: 100%;
     display: grid;
     gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));}
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
 
