--- a/src/productsPage/components/Product.css
+++ b/src/productsPage/components/Product.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    aspect-ratio: 1/1;
     /*    
     width: 100%; */
     /* margin: 20px 10px; */
@@ -22,6 +21,11 @@
     aspect-ratio: 1/1;
     object-fit: contain;
     cursor: pointer;
+}
+.product__image__load{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
                                                     /* TITLE */
