--- a/src/productPage/component/ProductSpinner.css
+++ b/src/productPage/component/ProductSpinner.css
@@ -5,11 +5,11 @@
     width: 80px;
     height: 80px;
 }
-  .lds-spinner div {
+.lds-spinner div {
     transform-origin: 40px 40px;
     animation: lds-spinner 1.2s linear infinite;
-  }
-  .lds-spinner div:after {
+}
+.lds-spinner div:after {
     content: " ";
     display: block;
     position: absolute;
@@ -18,7 +18,7 @@
     width: 6px;
     height: 18px;
     border-radius: 20%;
-    background: #fff;
+    background: gray;
 }
 .lds-spinner div:nth-child(1) {
     transform: rotate(0deg);
